--- a/search/image-search.html
+++ b/search/image-search.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Google Images</title>
         <link rel="icon" type="image" href="google-icon.png">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="static/style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -27,7 +27,7 @@
          <!---Google Logo -->
          <div class="container-fluid center">
             <div class="row padding col-sm-12 col-md-6 offset-md-3 vertical-center" style="padding-top: 160px;">
-                <img src="google-img-logo.JPG" class="center">
+                <img src="static/img/google-img-logo.JPG" class="center">
             </div>
         </div>
 
@@ -39,7 +39,7 @@
                     <i class="fas fa-search search-grey"></i>
                     <input name="q" type="text" placeholder="Search" class="input-box-img" autofocus="autofocus">
                     <i class="fas fa-camera" id="camera-left"></i>
-                    <img src="search-by-voice.jpg" id="voice-icon-middle">
+                    <img src="static/img/search-by-voice.jpg" id="voice-icon-middle">
                     <i class="fas fa-search" id="search-blue"></i>
                 </div>
             </form>
